Fixed some Warnings