@@ -38,7 +38,6 @@ import com.sun.star.beans.*;
 import com.sun.star.frame.*;
 import com.sun.star.lang.*;
 import com.sun.star.text.*;
-import com.sun.star.uno.*;
 import com.sun.star.util.*;
 import com.sun.star.container.*;
 import com.sun.star.sheet.*;
@@ -47,7 +46,6 @@ import com.sun.star.table.*;
 import com.sun.star.view.*;
 
 import com.sun.star.uno.Exception;
-import com.sun.star.io.IOException;
 
 
 public class Calc
@@ -649,7 +647,7 @@ public class Calc
     if (type == CellContentType.EMPTY)
       return null;
     else if (type == CellContentType.VALUE)
-      return new Double( cell.getValue());
+      return Double.valueOf(cell.getValue()).doubleValue(); 
     else if ((type == CellContentType.TEXT) || (type == CellContentType.FORMULA))
       return cell.getFormula();
     else {
